# bnb-py

./: README.md  pyproject.toml
src/bnb-py/: card.py  cards.json  game.py  main.py
